[gd_scene load_steps=12 format=3 uid="uid://bteu6rr1m2jya"]

[ext_resource type="Texture2D" uid="uid://c7kdkrqlypb8k" path="res://Assets/maps/mouse_map.png" id="1_prxjd"]
[ext_resource type="Script" path="res://Scripts/map.gd" id="2_wnghg"]
[ext_resource type="Script" path="res://Scripts/mouse_map.gd" id="3_6kylv"]
[ext_resource type="Texture2D" uid="uid://b0k6bh55hymx6" path="res://Assets/maps/debug_map.png" id="3_u7p1w"]
[ext_resource type="Texture2D" uid="uid://b2ymyq75gbxlc" path="res://Assets/maps/wasteland_map.png" id="5_vos11"]
[ext_resource type="Shader" path="res://Shaders/mapPolitical.gdshader" id="6_nr5qo"]
[ext_resource type="Shader" path="res://Shaders/mapGlobal.gdshader" id="7_b3rxd"]
[ext_resource type="Shader" path="res://Shaders/mapLocal.gdshader" id="7_cquxt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qnrge"]
shader = ExtResource("6_nr5qo")
shader_parameter/num_of_provinces = null
shader_parameter/base_color = null
shader_parameter/colors = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0swuy"]
shader = ExtResource("7_b3rxd")
shader_parameter/num_of_provinces = null
shader_parameter/base_color = null
shader_parameter/colors = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qj2um"]
shader = ExtResource("7_cquxt")
shader_parameter/num_of_provinces = null
shader_parameter/base_color = null
shader_parameter/colors = null

[node name="Map" type="Node2D"]
script = ExtResource("2_wnghg")

[node name="MouseMap" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_prxjd")
centered = false
script = ExtResource("3_6kylv")

[node name="DebugMap" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_u7p1w")
centered = false

[node name="WastelandMap" type="Sprite2D" parent="."]
texture = ExtResource("5_vos11")
centered = false

[node name="MapPolitical" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qnrge")
texture = ExtResource("1_prxjd")
centered = false

[node name="MapGlobal" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0swuy")
texture = ExtResource("1_prxjd")
centered = false

[node name="MapLocal" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qj2um")
texture = ExtResource("1_prxjd")
centered = false

[node name="SoldierObjs" type="Node2D" parent="."]
